Реализация WEB CRUD приложения с использованием Spring WEB MVC и Hibernate

--- a/src/webapp/WEB-INF/pages/hello/index.html
+++ b/src/webapp/WEB-INF/pages/hello/index.html
@@ -5,6 +5,7 @@
     <title>PP_2_3_1_Spring-MVC-Hibernate</title>
 </head>
 <body>
-<h2>Start page</h2>
+<h1>Приветствую!</h1>
+<a href="/users">К странице решения задачи PP_2_3_1_Spring-MVC-Hibernate</a>
 </body>
 </html>
